--- a/index.html
+++ b/index.html
@@ -1,134 +1,139 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >acceuil</title>
+    <title>acceuil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
-    <link href="sources/css/style.css" rel="stylesheet"/>
+    <link href="sources/css/style.css" rel="stylesheet" />
     <script src="sources/js/script.js"></script>
 </head>
 
-<body >
-<div id="header" class="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sport+</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="admin">Gestion</a>
-                    <a class="nav-link" href="logout">Deconnexion</a>
+<body>
+    <div id="header" class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Sport+</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="admin">Gestion</a>
+                        <a class="nav-link" href="logout">Deconnexion</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-</div>
-<div class="content" >
-       <div id="container" class="container"></div>
-</div>
-<div class="">
+        </nav>
+    </div>
+    <div class="content">
+        <div id="container" class="container"></div>
+    </div>
+    <div class="">
 
-    <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
+        <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
 
-        <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+            <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
 
-            <div class="me-5">
-                <span>Get connected with us on social networks : <a href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
-            </div>
+                <div class="">
+                    <span>Get connected with us on social networks : <a class="text-white"
+                            href="https://twitterplus.alwaysdata.net">Twitter+</a></span>
+                </div>
 
-            <div>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
+                <div>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="" class="text-white me-4">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
 
-        </section>
+            </section>
 
-        <section class="">
-            <div class="container text-center text-md-start mt-5">
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
 
-                <div class="row mt-3">
+                    <div class="row mt-3">
 
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <!-- Content -->
-                        <h6 class="text-uppercase fw-bold">Sport +</h6>
-                        <hr class="mb-4 mt-0 d-inline-block mx-auto social_description" />
-                        <p>
-                            Une entreprise qui entreprend.
-                        </p>
-                    </div>
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold">Sport +</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto social_description" />
+                            <p>
+                                Une entreprise qui entreprend.
+                            </p>
+                        </div>
 
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold">Products</h6>
-                        <hr class="mb-4 mt-0 d-inline-block mx-auto social_background" />
-                        <p>
-                            <a href="#!" class="text-white">lorem ipsum</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-white">lorem ipsum</a>
-                        </p>
-                    </div>
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold">Products</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto social_background" />
+                            <p>
+                                <a href="#!" class="text-white">lorem ipsum</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-white">lorem ipsum</a>
+                            </p>
+                        </div>
 
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
-                        <h6 class="text-uppercase fw-bold">Useful links</h6>
-                        <hr class="mb-4 mt-0 d-inline-block mx-auto social_account" />
-                        <p>
-                            <a href="#!" class="text-white">Your Account</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-white">Become an Affiliate</a>
-                        </p>
-                    </div>
+                            <h6 class="text-uppercase fw-bold">Useful links</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto social_account" />
+                            <p>
+                                <a href="#!" class="text-white">Your Account</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-white">Become an Affiliate</a>
+                            </p>
+                        </div>
 
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
-                        <h6 class="text-uppercase fw-bold">Contact</h6>
-                        <hr class="mb-4 mt-0 d-inline-block mx-auto social_contact" />
-                        <p><i class="fas fa-home mr-3"></i> France</p>
-                        <p><i class="fas fa-envelope mr-3"></i> sport+@example.com</p>
-                        <p><i class="fas fa-phone mr-3"></i> + 00 00 00 00</p>
-                        <p><i class="fas fa-print mr-3"></i> + 00 00 00 00</p>
+                            <h6 class="text-uppercase fw-bold">Contact</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto social_contact" />
+                            <p><i class="fas fa-home mr-3"></i> France</p>
+                            <p><i class="fas fa-envelope mr-3"></i> sport+@example.com</p>
+                            <p><i class="fas fa-phone mr-3"></i> + 00 00 00 00</p>
+                            <p><i class="fas fa-print mr-3"></i> + 00 00 00 00</p>
+                        </div>
+
                     </div>
 
                 </div>
+            </section>
 
+
+
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2023 Copyright:
+                <a class="text-white" href="index">Sport+</a>
             </div>
-        </section>
 
-
-
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2023 Copyright:
-            <a class="text-white" href="#">Sport+.fr</a>
-        </div>
-
-    </footer>
-</div>
+        </footer>
+    </div>
 </body>
+
 </html>
