--- a/account.html
+++ b/account.html
@@ -45,7 +45,7 @@
                         <ul class="nav flex-column mb-2">
                             <li class="nav-item">
                                 <a class="nav-link" href="account">
-                                    <span data-feather="file-text" class="align-text-bottom"></span>
+                                    <span data-feather="file-text" class="align-text-bottom text-secondary"></span>
                                     Mon compte
                                 </a>
                             </li>                        
