--- a/addprod.html
+++ b/addprod.html
@@ -66,7 +66,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="addprod">
-                                    <span data-feather="file" class="align-text-bottom"></span>
+                                    <span data-feather="file" class="align-text-bottom text-secondary"></span>
                                     Gestion de produit
                                 </a>
                             </li>
